--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Conserto De Geladeira | Gelo Certo</title>
     <link rel="stylesheet" href="a.css">
     <script src="script.js" defer></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17510706358"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17510706358');
+    </script>
 </head>
 <body id="asd">
     <header class="cabeçalho"> 
